--- a/app/frontend/src/components/items-list/items-list.css
+++ b/app/frontend/src/components/items-list/items-list.css
@@ -1,14 +1,50 @@
 .items-list {
     margin-left: 10%;
     padding-top: 1%;
-    color: brown;
+    font-family: 'Nunito', sans-serif;
+    color: #384047;
     margin-right: 10%;
+    justify-content: center;
     
 
 }
 
-li {
-    list-style: none;
-    font-size: large;
-    border: 1px solid yellow;
-}
+table {
+    max-width: 960px;
+    margin: 10px auto;
+  }
+  
+  
+  thead th {
+    font-weight: 400;
+    background: #8a97a0;
+    color: #FFF;
+  }
+  
+  tr {
+    background: #f4f7f8;
+    border-bottom: 1px solid #FFF;
+    margin-bottom: 5px;
+  }
+  
+  tr:nth-child(even) {
+    background: #e8eeef;
+  }
+  
+  th,
+  td {
+    text-align: left;
+    padding: 20px;
+    font-weight: 300;
+  }
+  
+  tfoot tr {
+    background: none;
+  }
+  
+  tfoot td {
+    padding: 10px 2px;
+    font-size: 0.8em;
+    font-style: italic;
+    color: #8a97a0;
+  }
