--- a/app/frontend/src/components/app/app.css
+++ b/app/frontend/src/components/app/app.css
@@ -8,14 +8,17 @@ html {
 }
 
 .app {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    min-height: 100vh;
+    justify-content: center;
 }
 
 .main {
     background-color:orange;
-    width: 80%;
+    justify-content: center;
     align-items: center;
-    height: 1000px;
-    margin-left: 10%;
-    margin-right: 10%;
+    
+    
 }
